# rkgw

./: .env.example  .env.proxy.example  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  README.md  docker-compose.gateway.yml  docker-compose.yml
.claude/: CLAUDE.md  README.md  agent-colors.json  settings.json
.claude/agent-memory/backend-qa/: MEMORY.md
.claude/agent-memory/database-engineer/: MEMORY.md
.claude/agents/: backend-qa.md  database-engineer.md  devops-engineer.md  document-writer.md  frontend-qa.md  kanban-master.md  react-frontend-engineer.md  rust-backend-engineer.md  scrum-master.md
.claude/hooks/: auto-format-after-edit.sh  block-sensitive-commits.sh  enforce-file-ownership.sh  scan-secrets-before-write.sh  worktree-guard-stop.sh
.claude/plans/: 2026-03-16-22-39-fix-code-review-findings-done.md  2026-03-17-11-51-multi-account-load-balancing-done.md  2026-03-17-12-03-multi-provider-proxy-mode-done.md  2026-03-17-15-22-audit-plans-board-sync-done.md  2026-03-17-15-30-cache-tokens-redacted-thinking-done.md  2026-03-17-15-38-cache-tokens-redacted-thinking-done.md  2026-03-17-16-51-orchestrator-chromadb-knowledge-base-done.md  2026-03-17-fix-iterm-split-pane-teammate-mode.md  2026-03-19-16-44-password-visibility-toggle-done.md  2026-03-19-16-44-simplify-team-skill-params-done.md  2026-03-19-16-44-ui-ux-audit-redesign-done.md  2026-03-19-create-git-tag-v111-done.md  2026-03-19-provider-page-redesign-done.md  2026-03-19-slack-interactive-workflows.md  2026-03-20-12-26-e2e-gap-coverage-done.md  2026-03-20-13-23-provider-auth-token-refresh-gaps-done.md  2026-03-20-13-44-fix-all-e2e-test-failures-done.md  2026-03-20-22-10-pr149-review-followup-fixes-done.md  2026-03-20-fix-slow-password-argon2-done.md  2026-03-21-codex-plan-review-gate-done.md  2026-03-21-fix-usage-page-response-unwrap-done.md  2026-03-21-remove-kanban-board-ticketing.md  2026-03-21-remove-presets-enhance-agents-done.md  2026-03-21-remove-write-from-debug-review-done.md  2026-03-21-team-document-skill-done.md  2026-03-23-remediate-review-findings-done.md  2026-03-24-copilot-expired-status-fix-done.md  2026-03-29-debug-model-populate.md  2026-03-29-fix-model-registry-populate-done.md  2026-03-29-remove-backend-benches-done.md  adaptive-sparking-salamander.md  ancient-crafting-music.md  atomic-knitting-squid.md  config-page-cleanup.md  floofy-painting-snail.md  gemini-removal-pr-description.md  gleaming-purring-parnas.md  goofy-launching-peacock.md  hazy-shimmying-teacup.md  magical-soaring-sun.md  (+10 more)
.claude/rules/: backend.md  commit.md  plan-mode.md  secrets.md  team-coordination.md  web-ui.md
.claude/skills/board-status/: SKILL.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  task.yml
.github/workflows/: ci.yml  pages.yml  project-automation.yml  release.yml
backend/: Cargo.toml  Dockerfile  entrypoint.sh
backend/benches/: benchmark.rs
backend/src/: config.rs  datadog.rs  error.rs  http_client.rs  lib.rs  main.rs  resolver.rs  thinking_parser.rs  tokenizer.rs
backend/src/auth/: manager.rs
backend/src/converters/: anthropic_to_gemini.rs  anthropic_to_kiro.rs  anthropic_to_openai.rs  core.rs  openai_to_anthropic.rs  openai_to_gemini.rs  openai_to_kiro.rs
backend/src/guardrails/: api.rs  bedrock.rs  engine.rs
backend/src/mcp/: api.rs  client_manager.rs  db.rs  health_monitor.rs  mod.rs  server.rs  tool_manager.rs  tool_syncer.rs  types.rs
backend/src/mcp/transport/: http.rs  mod.rs  sse.rs  stdio.rs
backend/src/middleware/: mod.rs
backend/src/models/: anthropic.rs  openai.rs
backend/src/providers/: anthropic.rs  copilot.rs  custom.rs  gemini.rs  kiro.rs  mod.rs  openai_codex.rs  qwen.rs  rate_limiter.rs  registry.rs  traits.rs  types.rs
backend/src/routes/: anthropic.rs  mod.rs  openai.rs  pipeline.rs  state.rs
backend/src/streaming/: mod.rs  sse.rs
backend/src/web_ui/: admin_pool.rs  api_keys.rs  config_api.rs  config_db.rs  copilot_auth.rs  crypto.rs  google_auth.rs  mod.rs  model_registry.rs  model_registry_handlers.rs  password_auth.rs  provider_oauth.rs  provider_priority.rs  qwen_auth.rs  routes.rs  session.rs  static_models.rs  user_kiro.rs
backend/tests/: integration_test.rs
conductor/: index.md  tracks.md
docs/: probe-limits.md
e2e-tests/: global-setup.ts  package-lock.json  package.json  playwright.config.ts
e2e-tests/helpers/: auth.ts
frontend/: nginx.conf  package-lock.json  package.json
frontend/e2e/: playwright.dev.config.ts
frontend/src/: App.tsx
gh-pages/: _config.yml  index.md
gh-pages/_includes/: head_custom.html  mermaid.html  mermaid_config.html
gh-pages/docs/: api-reference.md  client-setup.md  configuration.md  deployment.md  getting-started.md  modules.md  quickstart.md  research-notes.md  troubleshooting.md  web-ui.md
orchestrator/: .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
orchestrator/src/: config.ts  index.ts
orchestrator/tests/: ask-user-tool.test.ts  config.test.ts  github-projects.test.ts  github-task-store.test.ts  guardrails.test.ts  interaction-bridge.test.ts  knowledge-base.test.ts  registry.test.ts  task-queue.test.ts  validators.test.ts
src/: config.rs  error.rs  http_client.rs  lib.rs  main.rs  thinking_parser.rs  tls.rs  truncation.rs
src/auth/: credentials.rs  manager.rs  mod.rs  oauth.rs  refresh.rs  types.rs
src/converters/: openai_to_kiro.rs
src/metrics/: collector.rs
src/middleware/: mod.rs
src/routes/: mod.rs
src/web_ui/: config_api.rs  config_db.rs  mod.rs  routes.rs  sse.rs
tests/: integration_test.rs
web-ui/src/: App.tsx
(+161 files in other folders)
