[package]
name = "kiro-gateway"
version = "1.0.8"
edition = "2021"
authors = ["Jwadow"]
license = "AGPL-3.0"
description = "Proxy gateway for Kiro API - OpenAI and Anthropic compatible"
repository = "https://github.com/jwadow/kiro-gateway"
readme = "README.md"

[features]
default = []
test-utils = []
bench = ["hdrhistogram", "async-stream"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
http-body-util = "0.1"

# TLS / self-signed certificate generation
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"], default-features = false }
time = "0.3"
x509-parser = "0.16"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"
config = "0.14"
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Tokenization
tiktoken-rs = "0.5"

# PostgreSQL support
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }

# Embedded frontend assets
rust-embed = "8"
mime_guess = "2"

# Utilities
bytes = "1"
crossterm = "0.28"
dashmap = "5"
dirs = "5"
fuzzy-matcher = "0.3"
hostname = "0.4"
once_cell = "1"
ratatui = "0.29"
regex = "1"
sysinfo = "0.32"
tui-input = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
urlencoding = "2"
rand = "0.8"

# Benchmark dependencies (optional)
hdrhistogram = { version = "7", optional = true }
async-stream = { version = "0.3", optional = true }

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1"
proptest = "1"
tempfile = "3"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "kiro-gateway"
path = "src/main.rs"

[[bin]]
name = "probe_limits"
path = "src/bin/probe_limits.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
required-features = ["test-utils"]

[[bench]]
name = "gateway_benchmark"
path = "benches/benchmark.rs"
harness = false
required-features = ["bench"]
