[package]
name = "harbangan"
version = "1.0.8"
edition = "2021"
authors = ["Jwadow"]
license = "AGPL-3.0"
description = "Proxy gateway for Kiro API - OpenAI and Anthropic compatible"
repository = "https://github.com/if414013/harbangan"
readme = "README.md"

[features]
default = []
test-utils = []
bench = ["hdrhistogram"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
http-body-util = "0.1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Datadog APM tracing (OpenTelemetry pipeline, enabled at runtime via DD_AGENT_HOST)
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-datadog = { version = "0.15", features = ["reqwest-client"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["http-proto", "reqwest-rustls"] }
tracing-opentelemetry = "0.28"

# Error handling
thiserror = "1"
anyhow = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Tokenization
tiktoken-rs = "0.5"

# PostgreSQL support
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Utilities
bytes = "1"
dashmap = "6"
dirs = "6"
hostname = "0.4"
once_cell = "1"
regex = "1"
sysinfo = "0.38"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
urlencoding = "2"
rand = "0.8"

# Async utilities
async-trait = "0.1"
async-stream = "0.3"

# AWS Bedrock guardrails
aws-sigv4 = "1"
aws-credential-types = "1"
cel-interpreter = "0.8"
cel-parser = "0.8"

# Google SSO / session auth
openidconnect = "4"
axum-extra = { version = "0.7", features = ["cookie"] }
subtle = "2"

# Password auth + 2FA
argon2 = "0.5"
totp-rs = { version = "5", features = ["qr", "gen_secret"] }

# Benchmark dependencies (optional)
hdrhistogram = { version = "7", optional = true }

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockito = "1"
proptest = "1"
tempfile = "3"
temp-env = "0.3"
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[[bin]]
name = "harbangan"
path = "src/main.rs"

[[bin]]
name = "probe_limits"
path = "src/bin/probe_limits.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
required-features = ["test-utils"]

[[bench]]
name = "gateway_benchmark"
path = "benches/benchmark.rs"
harness = false
required-features = ["bench"]
